<resources>
    <string name="app_name">Fleet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="choose_option">Choose an option</string>
    <string name="quick_search">Quick search</string>
    <string name="create_business">Create business</string>
    <string name="create_account">Create account</string>
    <string name="quick_search_description">Quickly launch a search and look for the service you need</string>
    <string name="create_business_description">Create you own business and service and let the people know your greatness</string>
    <string name="create_account_description">Create a profile to participate in the community and get unique promos</string>
    <string name="login_account_description">Login into your personal account</string>

    <!-- Image content description -->
    <string name="presentation_logo_image">presentation logo image</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="username">User name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="continue_txt">Continue</string>
    <string name="accept">Accept</string>
    <string name="login_account">Login</string>
</resources>