<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_default_10_dimen"
    android:paddingEnd="@dimen/margin_default_10_dimen"
    tools:context=".view.fragment.account.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/presentation_logo_iv"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_default_20_dimen"
            android:contentDescription="@string/presentation_logo_image"
            android:src="@drawable/fleet_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/quick_search_cv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/account_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default_20_dimen"
            android:layout_marginTop="@dimen/margin_default_20_dimen"
            android:layout_marginEnd="@dimen/margin_default_20_dimen"
            android:layout_marginBottom="@dimen/margin_default_10_dimen"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/margin_default_20_dimen"
            app:cardElevation="@dimen/margin_default_5_dimen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="User nick name"
                        android:background="@color/transparent"
                        android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 0123456789_"
                        android:hint="@string/username"
                        android:inputType="textCapWords"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default_20_dimen"
            android:layout_marginTop="@dimen/margin_default_10_dimen"
            android:layout_marginEnd="@dimen/margin_default_20_dimen"
            android:layout_marginBottom="@dimen/margin_default_10_dimen"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/margin_default_20_dimen"
            app:cardElevation="@dimen/margin_default_5_dimen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="User name"
                        android:background="@color/transparent"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default_20_dimen"
            android:layout_marginTop="@dimen/margin_default_10_dimen"
            android:layout_marginEnd="@dimen/margin_default_20_dimen"
            android:layout_marginBottom="@dimen/margin_default_10_dimen"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/margin_default_20_dimen"
            app:cardElevation="@dimen/margin_default_5_dimen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="User nick name"
                        android:background="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/margin_default_20_dimen"
            android:layout_marginTop="@dimen/margin_default_10_dimen"
            android:layout_marginEnd="@dimen/margin_default_20_dimen"
            android:layout_marginBottom="@dimen/margin_default_10_dimen"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/margin_default_20_dimen"
            app:cardElevation="@dimen/margin_default_5_dimen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="User nick name"
                        android:background="@color/transparent"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_default_20_dimen"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                android:layout_marginEnd="@dimen/margin_default_20_dimen"
                android:layout_marginBottom="@dimen/margin_default_10_dimen"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/margin_default_20_dimen"
                app:cardElevation="@dimen/margin_default_5_dimen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="User name"
                            android:background="@color/transparent"
                            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                            android:hint="@string/name"
                            android:inputType="textCapWords"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_default_20_dimen"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                android:layout_marginEnd="@dimen/margin_default_20_dimen"
                android:layout_marginBottom="@dimen/margin_default_10_dimen"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/margin_default_20_dimen"
                app:cardElevation="@dimen/margin_default_5_dimen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="User last name"
                            android:background="@color/transparent"
                            android:digits="ABCDEFGHIJKLMNÑOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                            android:hint="@string/lastName"
                            android:inputType="textCapWords"
                            android:maxLength="80"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_default_20_dimen"
                android:layout_marginTop="@dimen/margin_default_10_dimen"
                android:layout_marginEnd="@dimen/margin_default_20_dimen"
                android:layout_marginBottom="@dimen/margin_default_10_dimen"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/margin_default_20_dimen"
                app:cardElevation="@dimen/margin_default_5_dimen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/transparent"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="User last name"
                            android:background="@color/transparent"
                            android:digits="0123456789"
                            android:hint="@string/phoneNumber"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:singleLine="true"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>